opam-version: "2.0"
version: "3.3~rc2"
synopsis: "A GLFW binding for OCaml"
maintainer: "Sylvain BOILARD <boilard@crans.org>"
authors: ["Sylvain BOILARD <boilard@crans.org>"]
license: "Zlib"
homepage: "https://github.com/SylvainBoilard/GLFW-OCaml"
bug-reports: "https://github.com/SylvainBoilard/GLFW-OCaml/issues"
dev-repo: "git+https://github.com/SylvainBoilard/GLFW-OCaml.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "conf-glfw3"
  "base-bigarray"
  "dune"              {build & >= "1.0"}
  "dune-configurator" {build}
  "conf-pkg-config"   {build}
  "ocaml"             {>= "4.02.0"}
]
