opam-version: "2.0"
version: "3.3.1-2"
synopsis: "A GLFW binding for OCaml"
maintainer: "Sylvain BOILARD <boilard@crans.org>"
authors: "Sylvain BOILARD <boilard@crans.org>"
license: "Zlib"
homepage: "https://github.com/SylvainBoilard/GLFW-OCaml"
bug-reports: "https://github.com/SylvainBoilard/GLFW-OCaml/issues"
depends: [
  "conf-glfw3"
  "base-bigarray"
  "dune"              {>= "2.0"}
  "dune-configurator"
  "conf-pkg-config"   {build}
  "ocaml"             {>= "4.02.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/SylvainBoilard/GLFW-OCaml.git"
